--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "videotube",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for youtube clone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["node" , "express" , "mongodb"],
+  "author": "Akash Singh Chauhan",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
+  }
 }
