--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "description": "backend for youtube clone",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon -r dotenv/config --exec node  src/server.js"
   },
-  "keywords": ["node" , "express" , "mongodb"],
+  "keywords": [
+    "node",
+    "express",
+    "mongodb"
+  ],
   "author": "Akash Singh Chauhan",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.18.1",
+    "morgan": "^1.10.1"
   }
 }
